wrote up a list of aims

--- a/src/find_github_repo.ipynb
+++ b/src/find_github_repo.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# find_github_repo\n",
+    "\n",
+    "## Goals\n",
+    "\n",
+    "- To extract the names of github repositories from Pubmed abstracts that mention github.\n",
+    "- To use the github api to get author and contribution data about those repositories\n",
+    "- To create a dataset linking the two\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
