change to data directory; list content

--- a/src/find_github_repo.ipynb
+++ b/src/find_github_repo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -24,16 +24,18 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "['github_pubs.xml', 'README.md']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1+1"
+    "import os\n",
+    "os.chdir(\"../data/\")\n",
+    "os.listdir(\"./\")"
    ]
   }
  ],
