--- a/src/find_github_repo.ipynb
+++ b/src/find_github_repo.ipynb
@@ -15,8 +15,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, set working directory"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +34,7 @@
        "['github_pubs.xml', 'README.md']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,6 +43,25 @@
     "import os\n",
     "os.chdir(\"../data/\")\n",
     "os.listdir(\"./\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, import libraries needed for xml parsing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "import datetime"
    ]
   }
  ],
