--- a/src/find_github_repo.ipynb
+++ b/src/find_github_repo.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
        "['github_pubs.xml', 'README.md']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -145,14 +145,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make data frame (this differs a bit from Kevin's code by including abstract also)"
+    "Make data frame (this differs a bit from Kevin's code by including abstract and url field) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -167,6 +168,7 @@
        "      <th>Authors</th>\n",
        "      <th>Date</th>\n",
        "      <th>Journal</th>\n",
+       "      <th>Url</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -176,6 +178,7 @@
        "      <td> [(Shiraishi, Fumihide), (Yoshida, Erika), (Voi...</td>\n",
        "      <td> 2015-09-11</td>\n",
        "      <td> IEEE/ACM Trans Comput Biol Bioinform</td>\n",
+       "      <td> </td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25601296</th>\n",
@@ -183,6 +186,7 @@
        "      <td>        [(Dixit, Abhishek), (Dobson, Richard J B)]</td>\n",
        "      <td> 2015-01-20</td>\n",
        "      <td>                      JMIR Med Inform</td>\n",
+       "      <td> </td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25558360</th>\n",
@@ -190,6 +194,7 @@
        "      <td> [(Tuck, Sean L), (Phillips, Helen Rp), (Hintze...</td>\n",
        "      <td> 2015-01-05</td>\n",
        "      <td>                            Ecol Evol</td>\n",
+       "      <td> </td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25553811</th>\n",
@@ -197,6 +202,7 @@
        "      <td> [(Chen, Junfang), (Lutsik, Pavlo), (Akulenko, ...</td>\n",
        "      <td> 2015-01-02</td>\n",
        "      <td>              J Bioinform Comput Biol</td>\n",
+       "      <td> </td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25549775</th>\n",
@@ -204,6 +210,7 @@
        "      <td> [(Manini, Simone), (Antiga, Luca), (Botti, Lor...</td>\n",
        "      <td> 2015-06-09</td>\n",
        "      <td>                       Ann Biomed Eng</td>\n",
+       "      <td> </td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -224,15 +231,15 @@
        "25553811  [(Chen, Junfang), (Lutsik, Pavlo), (Akulenko, ...  2015-01-02   \n",
        "25549775  [(Manini, Simone), (Antiga, Luca), (Botti, Lor...  2015-06-09   \n",
        "\n",
-       "                                       Journal  \n",
-       "26357045  IEEE/ACM Trans Comput Biol Bioinform  \n",
-       "25601296                       JMIR Med Inform  \n",
-       "25558360                             Ecol Evol  \n",
-       "25553811               J Bioinform Comput Biol  \n",
-       "25549775                        Ann Biomed Eng  "
+       "                                       Journal Url  \n",
+       "26357045  IEEE/ACM Trans Comput Biol Bioinform      \n",
+       "25601296                       JMIR Med Inform      \n",
+       "25558360                             Ecol Evol      \n",
+       "25553811               J Bioinform Comput Biol      \n",
+       "25549775                        Ann Biomed Eng      "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,30 +247,28 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.DataFrame()\n",
-    "col_names = [\"Date\", \"Journal\", \"Authors\",\"Abstract\"]\n",
+    "col_names = [\"Date\", \"Journal\", \"Authors\",\"Abstract\",\"Url\"]\n",
     "\n",
     "for article in parse_pubmed_xml('github_pubs.xml'):\n",
     "    row = pd.Series([article.pubdate, article.journal, [(author[0], author[1]) for author in article.get_authors()],\n",
-    "                     article.abstract],name=article.pmid, index=col_names)\n",
+    "                     article.abstract, ''],name=article.pmid, index=col_names)\n",
     "    df = df.append(row)\n",
     "\n",
     "df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "Check the content of the first abstract"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +279,7 @@
        "'Stability and sensitivity analyses of biological systems require the ad hocwriting of computer code, which is highly dependent on the particular model and burdensome for large systems. We propose a very accurate strategy to overcome this challenge. Its core concept is the conversion of the model into the format of biochemical systems theory (BST), which greatly facilitates the computation of sensitivities. First, the steady state of interest is determined by integrating the model equations toward the steady state and then using a Newton-Raphson method to fine-tune the result. The second step of conversion into the BST format requires several instances of numerical differentiation. The accuracy of this task is ensured by the use of a complex-variable Taylor scheme for all differentiation steps. The proposed strategy is implemented in a new software program, COSMOS, which automates the stability and sensitivity analysis of essentially arbitrary ODE models in a quick, yet highly accurate manner. The methods underlying the process are theoretically analyzed and illustrated with four representative examples: a simple metabolic reaction model; a model of aspartate-derived amino acid biosynthesis; a TCA-cycle model; and a modified TCA-cycle model. COSMOS has been deposited to https://github.com/BioprocessdesignLab/COSMOS.'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,12 +294,41 @@
    "source": [
     "Find address of github repository from abstract by searching for the \"https://github.com\" and then for the next space (this seems to work even if the abstract ends with the github address, so there is no space at the end).\n",
     "\n",
-    "TO DO: make this into a for loop!"
+    "TO DO: Work out problem in for loop! Work out close paren problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'find'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-78-56a0821b95e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mabstract\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miat\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mstart_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabstract\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"https://github.com\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0murl_to_end\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mabstract\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstart_index\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mspace_index\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0murl_to_end\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'find'"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,(len(df.index)-1)):             \n",
+    "    abstract = df.iat[i,0]\n",
+    "    start_index = abstract.find(\"https://github.com\")\n",
+    "    url_to_end = abstract[start_index:]\n",
+    "    space_index = url_to_end.find(\" \")\n",
+    "    github_url = url_to_end[:space_index]\n",
+    "    df.iat[i,4] = github_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -302,68 +336,172 @@
     {
      "data": {
       "text/plain": [
-       "402"
+       "79"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df.index)"
+    "i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22\n",
-      "https://github.com/foo\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'https://github.com/BioprocessdesignLab/COSMOS'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://github.com/BioprocessdesignLab/COSMOS'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Abstract</th>\n",
+       "      <th>Authors</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Journal</th>\n",
+       "      <th>Url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26357045</th>\n",
+       "      <td> Stability and sensitivity analyses of biologic...</td>\n",
+       "      <td> [(Shiraishi, Fumihide), (Yoshida, Erika), (Voi...</td>\n",
+       "      <td> 2015-09-11</td>\n",
+       "      <td> IEEE/ACM Trans Comput Biol Bioinform</td>\n",
+       "      <td> https://github.com/BioprocessdesignLab/COSMOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25601296</th>\n",
+       "      <td> Most electronic data capture (EDC) and electro...</td>\n",
+       "      <td>        [(Dixit, Abhishek), (Dobson, Richard J B)]</td>\n",
+       "      <td> 2015-01-20</td>\n",
+       "      <td>                      JMIR Med Inform</td>\n",
+       "      <td>                                              </td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25558360</th>\n",
+       "      <td> Remotely sensed data - available at medium to ...</td>\n",
+       "      <td> [(Tuck, Sean L), (Phillips, Helen Rp), (Hintze...</td>\n",
+       "      <td> 2015-01-05</td>\n",
+       "      <td>                            Ecol Evol</td>\n",
+       "      <td>     https://github.com/seantuck12/MODISTools)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25553811</th>\n",
+       "      <td> Whole-genome bisulfite sequencing (WGBS) is an...</td>\n",
+       "      <td> [(Chen, Junfang), (Lutsik, Pavlo), (Akulenko, ...</td>\n",
+       "      <td> 2015-01-02</td>\n",
+       "      <td>              J Bioinform Comput Biol</td>\n",
+       "      <td>           https://github.com/Junfang/AKSmooth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25549775</th>\n",
+       "      <td> A number of computational approaches have been...</td>\n",
+       "      <td> [(Manini, Simone), (Antiga, Luca), (Botti, Lor...</td>\n",
+       "      <td> 2015-06-09</td>\n",
+       "      <td>                       Ann Biomed Eng</td>\n",
+       "      <td>                                              </td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   Abstract  \\\n",
+       "26357045  Stability and sensitivity analyses of biologic...   \n",
+       "25601296  Most electronic data capture (EDC) and electro...   \n",
+       "25558360  Remotely sensed data - available at medium to ...   \n",
+       "25553811  Whole-genome bisulfite sequencing (WGBS) is an...   \n",
+       "25549775  A number of computational approaches have been...   \n",
+       "\n",
+       "                                                    Authors        Date  \\\n",
+       "26357045  [(Shiraishi, Fumihide), (Yoshida, Erika), (Voi...  2015-09-11   \n",
+       "25601296         [(Dixit, Abhishek), (Dobson, Richard J B)]  2015-01-20   \n",
+       "25558360  [(Tuck, Sean L), (Phillips, Helen Rp), (Hintze...  2015-01-05   \n",
+       "25553811  [(Chen, Junfang), (Lutsik, Pavlo), (Akulenko, ...  2015-01-02   \n",
+       "25549775  [(Manini, Simone), (Antiga, Luca), (Botti, Lor...  2015-06-09   \n",
+       "\n",
+       "                                       Journal  \\\n",
+       "26357045  IEEE/ACM Trans Comput Biol Bioinform   \n",
+       "25601296                       JMIR Med Inform   \n",
+       "25558360                             Ecol Evol   \n",
+       "25553811               J Bioinform Comput Biol   \n",
+       "25549775                        Ann Biomed Eng   \n",
+       "\n",
+       "                                                    Url  \n",
+       "26357045  https://github.com/BioprocessdesignLab/COSMOS  \n",
+       "25601296                                                 \n",
+       "25558360      https://github.com/seantuck12/MODISTools)  \n",
+       "25553811            https://github.com/Junfang/AKSmooth  \n",
+       "25549775                                                 "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "abstract = df.iat[0,0]\n",
-    "start_index = abstract.find(\"https://github.com\")\n",
-    "url_to_end = abstract[start_index:]\n",
-    "space_index = url_to_end.find(\" \")\n",
-    "github_url = url_to_end[:space_index]\n"
+    "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
