play aorund with urlparse

--- a/src/find_github_repo.ipynb
+++ b/src/find_github_repo.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -245,7 +245,7 @@
        "25549775                               Ann Biomed Eng      "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -322,9 +322,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from urlparse import urlparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -333,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -343,12 +354,23 @@
     "    abstract = df.iat[i,0]\n",
     "    try:\n",
     "        github_url = str(re.findall(github_url_regex, abstract))\n",
+    "        urlparse(github_url)\n",
+    "        github_project = \n",
     "        df.iat[i,5] = github_url\n",
     "        \n",
     "    except:\n",
     "        except_no = except_no + 1 \n",
     "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -361,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -371,7 +393,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "1\n"
      ]
     }
    ],
@@ -381,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +504,7 @@
        "25549775                              ['archtk.github.com']  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -513,7 +535,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['archtk.github.com']\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2 = str(df.iat[4,5])\n",
+    "print test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParseResult(scheme='', netloc='', path=\"['https://github.com/BioprocessdesignLab/COSMOS']\", params='', query='', fragment='')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urlparse(test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParseResult(scheme='', netloc='', path=\"['archtk.github.com']\", params='', query='', fragment='')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urlparse(test2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "gurl = urlparse(\"https://github.com/BioprosessdesignLab/COSMOS\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/BioprosessdesignLab/COSMOS\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gurl.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -524,7 +640,7 @@
        "2"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -558,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -578,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -592,7 +708,7 @@
     }
    ],
    "source": [
-    "cosmos = g.get_repo(\"BioprocessdesignLab/COSMOS\")\n",
+    "cosmos = g.get_repo(\"/BioprocessdesignLab/COSMOS\")\n",
     "print cosmos.description"
    ]
   }
