start looking into how to get contributor info

--- a/src/find_github_repo.ipynb
+++ b/src/find_github_repo.ipynb
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -1364,7 +1364,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.7841191067\n"
+      "28.7841191067\n",
+      "88.5496183206\n"
      ]
     }
    ],
@@ -1373,144 +1374,7 @@
     "\n",
     "print project_from_url*100.0/total_rows\n",
     "\n",
-    "print project_from_url*100.0/(total)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://github.com/BioprocessdesignLab/COSMOS\n"
-     ]
-    }
-   ],
-   "source": [
-    "test = str(df.iat[0,5])\n",
-    "print test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://archtk.github.com\n"
-     ]
-    }
-   ],
-   "source": [
-    "test2 = str(df.iat[4,5])\n",
-    "print test2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ParseResult(scheme='https', netloc='github.com', path='/BioprocessdesignLab/COSMOS', params='', query='', fragment='')"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "urlparse(test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ParseResult(scheme='http', netloc='archtk.github.com', path='', params='', query='', fragment='')"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "urlparse(test2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "gurl = urlparse(\"https://github.com/BioprosessdesignLab/COSMOS\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/BioprosessdesignLab/COSMOS\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(gurl.path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.find(\"https://github.com/\")\n",
-    "\n"
+    "print project_from_url*100.0/(project_from_url+no_project_from_url)"
    ]
   },
   {
@@ -1573,6 +1437,25 @@
    "source": [
     "cosmos = g.get_repo(\"BioprocessdesignLab/COSMOS\")\n",
     "print cosmos.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Repository.get_collaborators of <github.Repository.Repository object at 0x7fad0d328b10>>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print cosmos."
    ]
   }
  ],
