WIP updating notebooks with Plots.jl

--- a/notebooks/gender_detection.ipynb
+++ b/notebooks/gender_detection.ipynb
@@ -30,44 +30,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"../data/pubs\")\n",
-    "\n",
+    "os.chdir(\"../data/pubdata\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "names = []\n",
-    "with open(\"git.csv\") as infile:\n",
+    "with open(\"comp.csv\") as infile:\n",
     "    for line in infile:\n",
-    "        names.append(line.split(\",\")[3])"
+    "        names.append(line.split(\",\")[5])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we'll convert the list to a set, which is an unordered array of unique values (so it removes duplicates"
+    "Then we'll convert the list to a set, which is an unordered array of unique values (so it removes duplicates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1996\n",
-      "1086\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(names))\n",
     "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
     "    names = []\n",
     "    with open(csv_file) as infile:\n",
     "        for line in infile:\n",
-    "            names.append(line.split(\",\")[3])\n",
+    "            names.append(line.split(\",\")[5])\n",
     "            \n",
     "    return set(names)"
    ]
@@ -108,22 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "74620\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_names = names.union(get_unique_names(\"comp.csv\"))\n",
-    "all_names = all_names.union(get_unique_names(\"bio.csv\"))\n",
+    "names = names.union(get_unique_names(\"bio.csv\"))\n",
     "\n",
     "print(len(all_names))"
    ]
@@ -140,21 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "male\n",
-      "female\n",
-      "unknown\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gender_detector import GenderDetector\n",
     "detector = GenderDetector('us')\n",
@@ -165,173 +146,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Łukasz\n",
-      "Đurđica\n",
-      "Đorđe\n",
-      "Çağrı\n",
-      "Átila\n",
-      "Öncel\n",
-      "Åshild\n",
-      "Örjan\n",
-      "Živa\n",
-      "Ángela\n",
-      "Štěpánka\n",
-      "Şule\n",
-      "Östen\n",
-      "Árpád\n",
-      "Ágoston\n",
-      "Àlex\n",
-      "Özgün\n",
-      "Özgül\n",
-      "Özgür\n",
-      "É\n",
-      "Â\n",
-      "Ç\n",
-      "Å\n",
-      "Ø\n",
-      "Ó\n",
-      "Ö\n",
-      "Ş\n",
-      "Özge\n",
-      "Ênio\n",
-      "Éve\n",
-      "Øistein\n",
-      "Štěpán\n",
-      "Évelyne\n",
-      "İnanç\n",
-      "Ümit\n",
-      "Á\n",
-      "Ömer\n",
-      "Žarko\n",
-      "Éric\n",
-      "Ülo\n",
-      "Łucja\n",
-      "Øydis\n",
-      "Špela\n",
-      "Øjvind\n",
-      "Øystein\n",
-      "Ákos\n",
-      "Élio\n",
-      "Åslaug\n",
-      "Águedo\n",
-      "Éamonn\n",
-      "Ólafur\n",
-      "Čestmír\n",
-      "Çiğdem\n",
-      "Åsa\n",
-      "Åse\n",
-      "Özkan\n",
-      "Éva\n",
-      "Ángeles\n",
-      "Éder\n",
-      "Željko\n",
-      "Željka\n",
-      "Ândrea\n",
-      "Ülle\n",
-      "Àngel\n",
-      "Ľubomír\n",
-      "Özlem\n",
-      "Öjar\n",
-      "Şükrü\n",
-      "Àngels\n",
-      "Ágnes\n",
-      "Øyvind\n",
-      "Ünige\n",
-      "Áine\n",
-      "İbrahim\n",
-      "İkbal\n",
-      "Željan\n",
-      "Ågot\n",
-      "Ádám\n",
-      "África\n",
-      "Áslaug\n",
-      "Állan\n",
-      "Étienne\n",
-      "'Azlin\n",
-      "Šárka\n",
-      "Želimir\n",
-      "Ángel\n",
-      "Šimun\n",
-      "Óttar\n",
-      "Ève\n",
-      "Ângela\n",
-      "Édouard\n",
-      "Óscar\n",
-      "Ľudmila\n",
-      "Øyvin\n",
-      "Ørjan\n",
-      "Øivind\n",
-      "Émilie\n",
-      "Árni\n",
-      "Öznur\n",
-      "Érika\n",
-      "Úrsula\n",
-      "Şeniz\n",
-      "Álvaro\n",
-      "Åsmund\n",
-      "Åke\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gender_dict = {}\n",
     "counter = 0\n",
     "\n",
     "\n",
-    "# for name in all_names:\n",
-    "#     try:\n",
-    "#         gender = detector.guess(name)\n",
-    "#         gender_dict[name] = gender\n",
-    "#     except:\n",
-    "#         print(name)\n",
+    "for name in names:\n",
+    "    try:\n",
+    "        gender = detector.guess(name)\n",
+    "        gender_dict[name] = gender\n",
+    "    except:\n",
+    "        print(name)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "74515\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(gender_dict))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "61735\n",
-      "12780\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sum([1 for x in gender_dict if gender_dict[x] == 'unknown']))\n",
     "print(sum([1 for x in gender_dict if gender_dict[x] != 'unknown']))"
@@ -346,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -407,94 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1000\n",
-      "2000\n",
-      "3000\n",
-      "4000\n",
-      "5000\n",
-      "6000\n",
-      "7000\n",
-      "8000\n",
-      "9000\n",
-      "10000\n",
-      "11000\n",
-      "12000\n",
-      "13000\n",
-      "14000\n",
-      "15000\n",
-      "16000\n",
-      "17000\n",
-      "18000\n",
-      "19000\n",
-      "20000\n",
-      "21000\n",
-      "22000\n",
-      "23000\n",
-      "24000\n",
-      "25000\n",
-      "26000\n",
-      "27000\n",
-      "28000\n",
-      "29000\n",
-      "30000\n",
-      "31000\n",
-      "32000\n",
-      "33000\n",
-      "34000\n",
-      "35000\n",
-      "36000\n",
-      "37000\n",
-      "38000\n",
-      "39000\n",
-      "40000\n",
-      "41000\n",
-      "42000\n",
-      "43000\n",
-      "44000\n",
-      "45000\n",
-      "46000\n",
-      "47000\n",
-      "48000\n",
-      "49000\n",
-      "50000\n",
-      "51000\n",
-      "52000\n",
-      "53000\n",
-      "54000\n",
-      "55000\n",
-      "56000\n",
-      "57000\n",
-      "58000\n",
-      "59000\n",
-      "60000\n",
-      "61000\n",
-      "62000\n",
-      "63000\n",
-      "64000\n",
-      "65000\n",
-      "66000\n",
-      "67000\n",
-      "68000\n",
-      "69000\n",
-      "70000\n",
-      "71000\n",
-      "72000\n",
-      "73000\n",
-      "74000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from api_keys import genderize_key\n",
     "from genderize import Genderize\n",
@@ -508,8 +278,6 @@
     "genderize_dict = {}\n",
     "\n",
     "for i in range(0, len(all_names), 10):\n",
-    "    if i % 10000 == 0:\n",
-    "        print i\n",
     "    \n",
     "    query = all_names[i:i+10]\n",
     "    genders = genderize.get(query)\n",
@@ -578,9 +346,6 @@
     "counter = 0\n",
     "\n",
     "for i in range(counter, len(all_names), 20):\n",
-    "    counter += 20 \n",
-    "    if counter %1000 == 0:\n",
-    "        print counter\n",
     "    \n",
     "    names = all_names[i:i+20]\n",
     "    query = \";\".join(names)\n",
@@ -618,21 +383,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
