--- a/notebooks/xml_parsing.ipynb
+++ b/notebooks/xml_parsing.ipynb
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/KBLaptop/computation/Science/gender-comp-bio/notebooks\n"
+      "/Users/ksb/computation/science/gender-comp-bio/notebooks\n"
      ]
     }
    ],
@@ -53,35 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "['.DS_Store',\n",
-       " 'arxiv-bio-data.xml',\n",
-       " 'arxiv-data.xml',\n",
-       " 'arxivbio.csv',\n",
-       " 'arxivcs.csv',\n",
-       " 'bio.csv',\n",
-       " 'bio.xml',\n",
-       " 'comp.csv',\n",
-       " 'comp.xml',\n",
-       " 'cs-arxiv.csv',\n",
-       " 'data.ANNALS.all.csv',\n",
-       " 'data.ARCHIVES.all.csv',\n",
-       " 'data.BMJ.all.csv',\n",
-       " 'data.JAMA.all.csv',\n",
-       " 'data.LANCET.all.csv',\n",
-       " 'data.NEJM.all.csv',\n",
-       " 'impact.csv',\n",
-       " 'impact2.csv',\n",
-       " 'matched.csv',\n",
-       " 'med2-t.csv',\n",
-       " 'med2.csv',\n",
-       " 'med2.xml',\n",
-       " 'med2join.csv',\n",
-       " 'med2parsed.csv',\n",
-       " 'medcollab.csv',\n",
-       " 'NEJM-t.csv',\n",
-       " 'NEJM.csv',\n",
-       " 'NEJM.xml',\n",
-       " 'pubdata.tar.gz']"
+       "['arxiv-bio-data.xml', 'arxiv-data.xml', 'bio.xml', 'comp.xml']"
       ]
      },
      "execution_count": 2,
@@ -90,7 +62,7 @@
     }
    ],
    "source": [
-    "os.chdir(\"../data/pubs\")\n",
+    "os.chdir(\"../data/pubdata\")\n",
     "os.listdir()"
    ]
   },
@@ -106,18 +78,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "focus": false,
     "id": "5b2040ba-4302-4ad6-a2ce-23bf40975829"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26605382, IEEE/ACM Trans Comput Biol Bioinform:[('Huang', 'Yufei'), ('Chen', 'Yidong'), ('Qian', 'Xiaoning')]\n",
+      "26357062, IEEE/ACM Trans Comput Biol Bioinform:[('Wang', 'Haiying'), ('Zheng', 'Huiru')]\n",
+      "26357061, IEEE/ACM Trans Comput Biol Bioinform:[('Loohuis', 'Loes Olde'), ('Witzel', 'Andreas'), ('Mishra', 'Bud')]\n",
+      "26357060, IEEE/ACM Trans Comput Biol Bioinform:[('Kobayashi', 'Koichi'), ('Hiraishi', 'Kunihiko')]\n",
+      "26357059, IEEE/ACM Trans Comput Biol Bioinform:[('Ahmed', 'Hasin Afzal'), ('Mahanta', 'Priyakshi'), ('Bhattacharyya', 'Dhruba Kumar'), ('Kalita', 'Jugal Kumar')]\n",
+      "26357058, IEEE/ACM Trans Comput Biol Bioinform:[('Disanto', 'Filippo'), ('Rosenberg', 'Noah A')]\n"
+     ]
+    }
+   ],
    "source": [
     "import lxml.etree as ET\n",
     "import datetime\n",
     "\n",
-    "for event, element in ET.iterparse('git.xml', tag=\"PubmedArticle\", events=(\"end\",)):\n",
+    "i = 0\n",
+    "for event, element in ET.iterparse('comp.xml', tag=\"PubmedArticle\", events=(\"end\",)):\n",
+    "    i+=1\n",
     "    element.xpath('.//DateCreated/Year')[0].text\n",
     "\n",
     "    pmid = element.xpath('.//PMID')[0].text\n",
@@ -156,7 +143,9 @@
     "    \n",
     "    print(\"{}, {}:{}\".format(pmid, journal, authors))\n",
     "    \n",
-    "    element.clear()"
+    "    element.clear()\n",
+    "    if i > 5:\n",
+    "        break"
    ]
   },
   {
@@ -173,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "focus": false,
@@ -228,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "focus": false,
@@ -283,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "focus": false,
@@ -293,16 +282,16 @@
     {
      "data": {
       "text/plain": [
-       "<generator object iter_parse_pubmed at 0x109c40f68>"
+       "<generator object iter_parse_pubmed at 0x10a7ee780>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iter_parse_pubmed('git.xml')"
+    "iter_parse_pubmed('comp.xml')"
    ]
   },
   {
@@ -317,20 +306,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "focus": false,
     "id": "b9ec6b8d-7135-4fcd-b82a-2b2f5903754e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Article ID: 26605382>\n",
+      "2015-11-24\n",
+      "Huang, Yufei \n",
+      "Chen, Yidong \n",
+      "Qian, Xiaoning \n",
+      "\n",
+      "<Article ID: 26357062>\n",
+      "2015-09-11\n",
+      "Wang, Haiying \n",
+      "Zheng, Huiru \n",
+      "\n",
+      "<Article ID: 26357061>\n",
+      "2015-09-11\n",
+      "Loohuis, Loes Olde\n",
+      "Witzel, Andreas \n",
+      "Mishra, Bud \n",
+      "\n",
+      "<Article ID: 26357060>\n",
+      "2015-09-11\n",
+      "Kobayashi, Koichi \n",
+      "Hiraishi, Kunihiko \n",
+      "\n",
+      "<Article ID: 26357059>\n",
+      "2015-09-11\n",
+      "Ahmed, Hasin Afzal\n",
+      "Mahanta, Priyakshi \n",
+      "Bhattacharyya, Dhruba Kumar\n",
+      "Kalita, Jugal Kumar\n",
+      "\n",
+      "<Article ID: 26357058>\n",
+      "2015-09-11\n",
+      "Disanto, Filippo \n",
+      "Rosenberg, Noah A\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "for article in iter_parse_pubmed('github_pubs.xml'):\n",
+    "i = 0\n",
+    "for article in iter_parse_pubmed('comp.xml'):\n",
+    "    i+=1\n",
     "    print(article)\n",
     "    print(article.pubdate)\n",
     "    for author in article.get_authors():\n",
     "        print(\"{}, {} {}\".format(author.last_name, author.first_name, author.initials))\n",
-    "    print()"
+    "    print()\n",
+    "    if i > 5:\n",
+    "        break"
    ]
   },
   {
@@ -347,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "focus": false,
@@ -390,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "focus": false,
@@ -402,26 +436,26 @@
      "output_type": "stream",
      "text": [
       "                Date                               Journal Author Name  \\\n",
-      "26357045  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform    Eberhard   \n",
-      "26357045  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform       Erika   \n",
-      "25601296  2015-01-20                       JMIR Med Inform    Abhishek   \n",
-      "25601296  2015-01-20                       JMIR Med Inform     Richard   \n",
-      "25558360  2015-01-05                             Ecol Evol        Sean   \n",
-      "25558360  2015-01-05                             Ecol Evol    Lawrence   \n",
-      "25558360  2015-01-05                             Ecol Evol       Helen   \n",
-      "25558360  2015-01-05                             Ecol Evol        Andy   \n",
-      "25558360  2015-01-05                             Ecol Evol      Rogier   \n",
+      "26605382  2015-11-24  IEEE/ACM Trans Comput Biol Bioinform    Xiaoning   \n",
+      "26605382  2015-11-24  IEEE/ACM Trans Comput Biol Bioinform      Yidong   \n",
+      "26357062  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform     Haiying   \n",
+      "26357062  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform       Huiru   \n",
+      "26357061  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform        Loes   \n",
+      "26357061  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform         Bud   \n",
+      "26357061  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform     Andreas   \n",
+      "26357060  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform      Koichi   \n",
+      "26357060  2015-09-11  IEEE/ACM Trans Comput Biol Bioinform    Kunihiko   \n",
       "\n",
-      "             Position  \n",
-      "26357045         last  \n",
-      "26357045       second  \n",
-      "25601296        first  \n",
-      "25601296         last  \n",
-      "25558360        first  \n",
-      "25558360         last  \n",
-      "25558360       second  \n",
-      "25558360  penultimate  \n",
-      "25558360        other  \n"
+      "         Position  \n",
+      "26605382     last  \n",
+      "26605382   second  \n",
+      "26357062    first  \n",
+      "26357062     last  \n",
+      "26357061    first  \n",
+      "26357061     last  \n",
+      "26357061   second  \n",
+      "26357060    first  \n",
+      "26357060     last  \n"
      ]
     }
    ],
@@ -431,34 +465,39 @@
     "col_names = [\"Date\", \"Journal\", \"Author Name\", \"Position\"]\n",
     "df = pd.DataFrame(columns=col_names)\n",
     "\n",
-    "for article in iter_parse_pubmed('git.xml'):\n",
+    "i = 0\n",
+    "for article in iter_parse_pubmed('comp.xml'):\n",
+    "    i+=1\n",
     "    first, last, second, penultimate, others = score_authors(article.authors)\n",
     "    if first:\n",
-    "        row = pd.Series([article.pubdate, article.journal, first.first_name, \"first\"], name=article.pmid, index=col_names)\n",
+    "        row = pd.Series([str(article.pubdate)), article.journal, first.first_name, \"first\"], name=article.article_id, index=col_names)\n",
     "        df = df.append(row)\n",
     "    else:\n",
     "        continue\n",
     "    try:\n",
-    "        row = pd.Series([article.pubdate, article.journal, last.first_name, \"last\"], name=article.pmid, index=col_names)\n",
+    "        row = pd.Series([str(article.pubdate), article.journal, last.first_name, \"last\"], name=article.article_id, index=col_names)\n",
     "        df = df.append(row)\n",
     "    except:\n",
     "        pass\n",
     "    try:\n",
-    "        row = pd.Series([article.pubdate, article.journal, second.first_name, \"second\"], name=article.pmid, index=col_names)\n",
+    "        row = pd.Series([str(article.pubdate), article.journal, second.first_name, \"second\"], name=article.article_id, index=col_names)\n",
     "        df = df.append(row)\n",
     "    except:\n",
     "        pass\n",
     "    try:\n",
-    "        row = pd.Series([article.pubdate, article.journal, penultimate.first_name, \"penultimate\"], name=article.pmid, index=col_names)\n",
+    "        row = pd.Series([str(article.pubdate), article.journal, penultimate.first_name, \"penultimate\"], name=article.article_id, index=col_names)\n",
     "        df = df.append(row)\n",
     "    except:\n",
     "        pass\n",
     "    try:\n",
     "        for x in others:\n",
-    "            row = pd.Series([article.pubdate, article.journal, x.first_name, \"other\"], name=article.pmid, index=col_names)\n",
+    "            row = pd.Series([str(article.pubdate), article.journal, x.first_name, \"other\"], name=article.article_id, index=col_names)\n",
     "            df = df.append(row)\n",
     "    except:\n",
     "        pass\n",
+    "    \n",
+    "    if i > 5:\n",
+    "        break\n",
     "    \n",
     "print(df[1:10])"
    ]
@@ -474,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -542,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -567,28 +606,28 @@
     "    for article in articles:\n",
     "        first, last, second, penultimate, others = score_authors(article.authors)\n",
     "        if first:\n",
-    "            row = pd.Series([article.pubdate, article.journal, first.first_name, \"first\"], name=article.article_id, index=col_names)\n",
+    "            row = pd.Series([str(article.pubdate), article.journal, first.first_name, \"first\"], name=article.article_id, index=col_names)\n",
     "            df = df.append(row)\n",
     "        else:\n",
     "            continue\n",
     "        try:\n",
-    "            row = pd.Series([article.pubdate, article.journal, last.first_name, \"last\"], name=article.article_id, index=col_names)\n",
+    "            row = pd.Series([str(article.pubdate), article.journal, last.first_name, \"last\"], name=article.article_id, index=col_names)\n",
     "            df = df.append(row)\n",
     "        except:\n",
     "            pass\n",
     "        try:\n",
-    "            row = pd.Series([article.pubdate, article.journal, second.first_name, \"second\"], name=article.article_id, index=col_names)\n",
+    "            row = pd.Series([str(article.pubdate), article.journal, second.first_name, \"second\"], name=article.article_id, index=col_names)\n",
     "            df = df.append(row)\n",
     "        except:\n",
     "            pass\n",
     "        try:\n",
-    "            row = pd.Series([article.pubdate, article.journal, penultimate.first_name, \"penultimate\"], name=article.article_id, index=col_names)\n",
+    "            row = pd.Series([str(article.pubdate), article.journal, penultimate.first_name, \"penultimate\"], name=article.article_id, index=col_names)\n",
     "            df = df.append(row)\n",
     "        except:\n",
     "            pass\n",
     "        try:\n",
     "            for x in others:\n",
-    "                row = pd.Series([article.pubdate, article.journal, x.first_name, \"other\"], name=article.article_id, index=col_names)\n",
+    "                row = pd.Series([str(article.pubdate), article.journal, x.first_name, \"other\"], name=article.article_id, index=col_names)\n",
     "                df = df.append(row)\n",
     "        except:\n",
     "            pass\n",
@@ -616,15 +655,24 @@
     "\n",
     "I played around trying to get `sexmachine` and `GenderComputer` to work, but ran into some issues, and those projects don't seem like they're being maintained, so I thought i'd try [genderize.io](http://genderize.io) and [gender-api.com](gender-api.com). The trouble is these are a web apis, which takes more time than something run locally, and they have a limit to the number of requests you can make. The owners of both of these APIs generously provided me with enough requests to use them for free for this project, but I'll show how to use all three methods.\n",
     "\n",
-    "On to a [new notebook](../src/gender_detection.ipynb)..."
+    "On to a [new notebook](gender_detection.ipynb)..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 brew",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3_brew"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -636,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
